# hello-world-cmake

./: CMakeLists.txt  README.md
src/: hello.cpp
